--- a/home.html
+++ b/home.html
@@ -1,21 +1,3 @@
-<?php 
-
-    // function ตรวจสอบว่า เข้าสู่ระบบริยัง? ถ้ายังไม่เข้าให้ แสดงหน้า Login
-    session_start();
-
-    if (!isset($_SESSION['username'])) {
-        $_SESSION['msg'] = "You must log in first";
-        header('location: login.php');
-    }
-
-    if (isset($_GET['logout'])) {
-        session_destroy();
-        unset($_SESSION['username']);
-        header('location: login.php');
-    }
-    
-?>
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -35,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-danger">
         <div class="container-fluid">
            <!-- Logo navbar 'mx-3 = ระยะห่าง', 'text-white = สีข้อความ' --> 
-          <a class="navbar-brand mx-3 text-white" href="#">THE CONCERT</a>
+          <a class="navbar-brand mx-3 text-white" href="home.html">THE CONCERT</a>
 
           <!-- navbar button mobile--> 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,10 +27,10 @@
             <!-- navbar manu--> 
           <div class="collapse navbar-collapse" id="navbarSupportedContent"> 
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                <a href="home.html" class="text-white btn btn-info">Home</a>
+                <a  class="text-white btn btn-info">Welcome</a>
             </ul>
             <ul class="navbar-nav mx-1 mb-2 mb-lg-0">
-                  <a href="login.php" class="btn btn-danger">Logout</a>
+                  <a href="index.php?logout='0'" class="btn btn-danger">Logout</a>
               </ul>                 
           </div>
         </div>
@@ -61,34 +43,19 @@
             All EVEN
             </span>
         </div>
+                <!-- Image Overlay -->
+                <div class="card">
+                  <img src="https://cdn.pixabay.com/photo/2020/12/23/14/41/forest-5855196__340.jpg" class="card-img-top">
+                  <img src=images/rice.jpg>
+                  <div class="card-body card-img-overlay">
+                      <h4 class="card-title text-white">เที่ยวทะเล</h4>
+                      <h6 class="card-subtitle mb-2 text-white">เผยแพร่ 01/01/2021</h6>
+                      <p class="card-text text-white">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto necessitatibus libero veniam doloremque soluta. Commodi, similique, nesciunt corporis laboriosam fuga sapiente non blanditiis inventore quasi labore tempora enim dicta a!</p>
+                      <a href="#" class="btn btn-success">อ่านบทความ</a>
+                  </div>
+                  <div class="card-footer">ผู้เขียนบทความ , ก้องรักสยาม</div>
+              </div>
+              <br>
     </nav>
-    <!-- 
-    <div class="homeheader">
-        <h2> All EVEN</h2>
-    </div>
-    -->
-
-    <div class="homecontent">
-        <!--  notification message -->
-        <?php if (isset($_SESSION['success'])) : ?>
-            <div class="success">
-                <h3>
-                    <?php 
-                        echo $_SESSION['success'];
-                        unset($_SESSION['success']);
-                    ?>
-                </h3>
-            </div>
-        <?php endif ?>
-        
-        <!-- logged in user information -->
-        <?php if (isset($_SESSION['username'] )) : ?>
-            <p>Welcome <strong><?php echo $_SESSION['username']; ?></strong></p>
-            <p>Do you have to buy a ticket? <a href="home.html" style="color: blue;">Home Page</a></p>
-            <p><a href="index.php?logout='1'" style="color: red;">Logout</a></p>
-        <?php endif ?>
-
-    </div>
-
 </body>
 </html>
